--- a/capstone-home.html
+++ b/capstone-home.html
@@ -116,11 +116,7 @@
               ></button>
             </div>
             <div class="carousel-inner">
-              <div class="carousel-item carousel-item-1 active">
-                <h4>Dennis Wilson</h4>
-                <h5>Customer</h5>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente voluptates omnis veniam voluptatibus reiciendis atque alias illum, inventore officiis libero. Quaerat, molestias repellendus! Mollitia explicabo soluta laudantium recusandae ullam. Ducimus.</p>
-              </div>
+              <div class="carousel-item carousel-item-1 active"></div>
               <div class="carousel-item carousel-item-2"></div>
               <div class="carousel-item carousel-item-3"></div>
             </div>
@@ -466,7 +462,11 @@
             ></button>
           </div>
           <div class="intro-inner">
-            <div class="intro-item intro-item-1 active"></div>
+            <div class="intro-item intro-item-1 active">
+              <h4>Dennis Wilson</h4>
+              <h5>Customer</h5>
+              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente voluptates omnis veniam voluptatibus reiciendis atque alias illum, inventore officiis libero. Quaerat, molestias repellendus! Mollitia explicabo soluta laudantium recusandae ullam. Ducimus.</p>
+            </div>
             <div class="intro-item intro-item-2"></div>
             <div class="intro-item intro-item-3"></div>
           </div>
