--- a/capstone-home.html
+++ b/capstone-home.html
@@ -461,7 +461,7 @@
             <div class="intro-item intro-item-1 active">
               <h4>Dennis Wilson</h4>
               <h5>Customer</h5>
-              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente voluptates omnis veniam voluptatibus reiciendis atque alias illum, inventore officiis libero. Quaerat, molestias repellendus! Mollitia explicabo soluta laudantium recusandae ullam. Ducimus.</p>
+              <p></p>
             </div>
             <div class="intro-item intro-item-2"></div>
             <div class="intro-item intro-item-3"></div>
@@ -488,22 +488,29 @@
             Aliquam eget turpis ornare, euismod ligul aeget, enenatis dui.
           </p>
           <p>
-            © 2022 Farmstead. All Rights Reserved | WordPress Theme by<span>
+            © 2022 Farmstead. All Rights Reserved | WordPress Theme by<a
+              class="w3layout"
+              href="##"
+            >
               W3Layouts.
-            </span>
+            </a>
           </p>
         </div>
         <div class="col-right">
           <h5>NEWSLETTER</h5>
-          <p>Subscribe to our mailing list and get updates to your email inbox.</p>
-          <input type="email" placeholder="Email Address">
-          <button><i class="fa-solid fa-paper-plane"></i></button>
+          <p>
+            Subscribe to our mailing list and get updates to your email inbox.
+          </p>
+          <div class="search-engine">
+            <input type="email" placeholder="Email Address" />
+            <button><i class="fa-solid fa-paper-plane"></i></button>
+          </div>
           <nav class="navbar">
-            <a href="#"><i class="fa-brands fa-facebook"></i></a>
-            <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-            <a href="#"><i class="fa-brands fa-twitter"></i></a>
-            <a href="#"><i class="fa-brands fa-google-plus-g"></i></a>
-            <a href="#"><i class="fa-brands fa-github"></i></a>
+            <a href="#f"><i class="fa-brands fa-facebook-f"></i></a>
+            <a href="#l"><i class="fa-brands fa-linkedin-in"></i></a>
+            <a href="#t"><i class="fa-brands fa-twitter"></i></a>
+            <a href="#gg"><i class="fa-brands fa-google-plus-g"></i></a>
+            <a href="#g"><i class="fa-brands fa-github"></i></a>
           </nav>
         </div>
       </div>
